--- a/.project
+++ b/.project
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>com.idega.jackrabbit</name>
-	<comment>MyFaces is an implementation of JavaServer Faces</comment>
-	<projects>
-		<project>com.idega.block.web2.0</project>
-	</projects>
+	<comment>Jackrabbit</comment>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
