--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   	<version>4.0-SNAPSHOT</version>
   </parent>
   <packaging>jar</packaging>
-  <groupId>com.idega.block.platform</groupId>
+  <groupId>com.idega.block.experimental</groupId>
   <artifactId>com.idega.jackrabbit</artifactId>
   <version>1.1.1-SNAPSHOT</version>
   <name>Apache Jackrabbit integration</name>
