--- a/.project
+++ b/.project
@@ -2,6 +2,8 @@
 <projectDescription>
 	<name>com.idega.jackrabbit</name>
 	<comment>Jackrabbit</comment>
+	<projects>
+	</projects>
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
