--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
   <groupId>com.idega.block.experimental</groupId>
   <artifactId>com.idega.jackrabbit</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.3-SNAPSHOT</version>
   <name>Apache Jackrabbit integration</name>
   <scm>
     <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
@@ -26,54 +26,93 @@
   </developers>
   <dependencies>
   
+    <!--dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit</artifactId>
+      <version>1.3</version>
+      <type>pom</type>
+    </dependency-->
+
+
+   <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-api</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
-      <version>1.1.1</version>
+      <version>1.3</version>
       <type>jar</type>
     </dependency>
-
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-index-filters</artifactId>
-      <version>1.1.1</version>
-      <type>jar</type>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-client</artifactId>
-      <version>1.1.1</version>
-      <type>jar</type>
-    </dependency>
-
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-commons</artifactId>
-      <version>1.1.1</version>
+      <version>1.3</version>
       <type>jar</type>
     </dependency>
-    
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-jcr-tests</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency>
+    <!--dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-test-extractors</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency-->
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-jcr-commons</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-rmi</artifactId>
-      <version>1.1.1</version>
+      <version>1.3</version>
       <type>jar</type>
     </dependency>
-
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-server</artifactId>
-      <version>1.1.1</version>
+      <version>1.3</version>
       <type>jar</type>
     </dependency>
-
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-webdav</artifactId>
-      <version>1.1.1</version>
+      <artifactId>jackrabbit-webdav</artifactId>
+      <version>1.3</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-classloader</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency>
+    <!--dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-webapp</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency-->
+    
+    <!--dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-index-filters</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency-->
+    <!--dependency>
+      <groupId>org.apache.jackrabbit</groupId>
+      <artifactId>jackrabbit-jcr-client</artifactId>
+      <version>1.3</version>
+      <type>jar</type>
+    </dependency-->
 
   </dependencies>
 </project>
