--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
   	<groupId>com.idega.block.platform</groupId>
-  	<artifactId>com.idega.block.base</artifactId>
-  	<version>4.0-SNAPSHOT</version>
+  	<artifactId>com.idega.block.platform</artifactId>
+  	<version>4.0.2-SNAPSHOT</version>
   </parent>
   <packaging>jar</packaging>
   <groupId>com.idega.block.experimental</groupId>
   <artifactId>com.idega.jackrabbit</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>4.0.2-SNAPSHOT</version>
   <name>Apache Jackrabbit integration</name>
   <scm>
     <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
@@ -33,84 +33,91 @@
       <type>pom</type>
     </dependency-->
 
+   <dependency>
+      <groupId>javax.jcr</groupId>
+      <artifactId>jcr</artifactId>
+      <version>1.0</version>
+      <type>jar</type>
+    </dependency>
+
 
    <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-api</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-core</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-commons</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-tests</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <!--dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-test-extractors</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency-->
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-commons</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-rmi</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-server</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-webdav</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-classloader</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency>
-    <!--dependency>
+    <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-webapp</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
-    </dependency-->
+    </dependency>
     
     <!--dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-index-filters</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency-->
     <!--dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-client</artifactId>
-      <version>1.3</version>
+      <version>1.4</version>
       <type>jar</type>
     </dependency-->
 
