--- a/pom.xml
+++ b/pom.xml
@@ -1,126 +1,75 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
   	<groupId>com.idega.block.platform</groupId>
   	<artifactId>com.idega.block.platform</artifactId>
-  	<version>4.1.3-SNAPSHOT</version>
+  	<version>4.1.3-SNAPSHOT</version>	<!-- TODO: version 5.x should be used  -->
   </parent>
-  <packaging>jar</packaging>
-  <groupId>com.idega.block.experimental</groupId>
+  <name>idegaWeb Jackrabbit</name>
+  <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.jackrabbit</artifactId>
-  <version>4.1.3-SNAPSHOT</version>
-  <name>Apache Jackrabbit integration</name>
+  <version>4.1.3-SNAPSHOT</version>		<!-- TODO: version 5.x should be used  -->
+  <organization>
+  	<name>Idega Software</name>
+  	<url>www.idega.com</url>
+  </organization>
+  <inceptionYear>2010</inceptionYear>
+  <description>Apache Jackrabbit framework integration</description>
+  
   <scm>
-    <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
-    <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection>
+    <connection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</connection>
+    <developerConnection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</developerConnection> 
+     <!--
+    <connection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</connection>
+    <developerConnection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</developerConnection>
+    -->
+    <tag>com_idega_block_platform-4_1_2</tag>
   </scm>
   
   <developers>
-    <developer>
+  	<developer>
       <name>Tryggvi Larusson</name>
       <id>tryggvil</id>
       <email>tryggvi@idega.is</email>
       <organization>idega software</organization>
       <roles/>
     </developer>
+    <developer>
+      <name>Valdas Žemaitis</name>
+      <id>valdas</id>
+      <email>valdas@idega.com</email>
+      <organization>idega software</organization>
+    </developer>
   </developers>
-  <dependencies>
   
-    <!--dependency>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.idega.block.platform</groupId>
+  		<artifactId>com.idega.core</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.idega.block.platform</groupId>
+  		<artifactId>com.idega.dwr</artifactId>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.jackrabbit</groupId>
+  		<artifactId>jackrabbit-core</artifactId>
+  		<version>2.1.1</version>
+  	</dependency>
+  	<dependency>
       <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit</artifactId>
-      <version>1.3</version>
-      <type>pom</type>
-    </dependency-->
-
-   <dependency>
-      <groupId>javax.jcr</groupId>
-      <artifactId>jcr</artifactId>
-      <version>1.0</version>
-      <type>jar</type>
-    </dependency>
-
-
-   <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-api</artifactId>
-      <version>1.5.0</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-core</artifactId>
-      <version>1.5.6</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-commons</artifactId>
-      <version>1.5.5</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-tests</artifactId>
-      <version>1.5.0</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-text-extractors</artifactId>
-      <version>1.5.0</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-rmi</artifactId>
-      <version>1.5.0</version>
-      <type>jar</type>
+      <artifactId>jackrabbit-webdav</artifactId>
+      <version>2.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-server</artifactId>
-      <version>1.5.6</version>
-      <type>jar</type>
+      <version>2.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-webdav</artifactId>
-      <version>1.1</version>
-      <type>jar</type>
+      <artifactId>jackrabbit-jcr-rmi</artifactId>
+      <version>2.1.1</version>
     </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-webdav</artifactId>
-      <version>1.5.5</version>
-      <type>jar</type>
-    </dependency>
-    
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-classloader</artifactId>
-      <version>1.5.0</version>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-webapp</artifactId>
-      <version>1.5.6</version>
-      <type>jar</type>
-    </dependency>
-    
-    <!--dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-index-filters</artifactId>
-      <version>1.4</version>
-      <type>jar</type>
-    </dependency-->
-    <!--dependency>
-      <groupId>org.apache.jackrabbit</groupId>
-      <artifactId>jackrabbit-jcr-client</artifactId>
-      <version>1.4</version>
-      <type>jar</type>
-    </dependency-->
-
   </dependencies>
 </project>
