--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <parent>
   	<groupId>com.idega.block.platform</groupId>
   	<artifactId>com.idega.block.platform</artifactId>
-  	<version>5.0.0-SNAPSHOT</version>	<!-- TODO: version 5.x should be used  -->
+  	<version>5.0.0-SNAPSHOT</version>
   </parent>
   <name>idegaWeb Jackrabbit</name>
   <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.jackrabbit</artifactId>
-  <version>5.0.0-SNAPSHOT</version>		<!-- TODO: version 5.x should be used  -->
+  <version>5.0.0-SNAPSHOT</version>
   <organization>
   	<name>Idega Software</name>
   	<url>www.idega.com</url>
@@ -23,7 +23,7 @@
     <connection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</connection>
     <developerConnection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</developerConnection>
     -->
-    <tag>com_idega_block_platform-4_1_2</tag>
+    <tag>com_idega_block_platform-5_0_0</tag>
   </scm>
   
   <developers>
@@ -54,22 +54,22 @@
   	<dependency>
   		<groupId>org.apache.jackrabbit</groupId>
   		<artifactId>jackrabbit-core</artifactId>
-  		<version>2.1.1</version>
+  		<version>2.2.7</version>
   	</dependency>
   	<dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-webdav</artifactId>
-      <version>2.1.1</version>
+      <version>2.2.7</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-server</artifactId>
-      <version>2.1.1</version>
+      <version>2.2.7</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-rmi</artifactId>
-      <version>2.1.1</version>
+      <version>2.2.7</version>
     </dependency>
   </dependencies>
 </project>
