--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,6 @@
   <inceptionYear>2010</inceptionYear>
   <description>Apache Jackrabbit framework integration</description>
   
-  <scm>
-    <connection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</connection>
-    <developerConnection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</developerConnection> 
-     <!--
-    <connection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</connection>
-    <developerConnection>scm:cvs:ext:idegaweb@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.jackrabbit/</developerConnection>
-    -->
-    <tag>com_idega_block_platform-5_0_0</tag>
-  </scm>
-  
   <developers>
   	<developer>
       <name>Tryggvi Larusson</name>
@@ -54,22 +44,22 @@
   	<dependency>
   		<groupId>org.apache.jackrabbit</groupId>
   		<artifactId>jackrabbit-core</artifactId>
-  		<version>2.2.7</version>
+  		<version>${org.apache.jackrabbit-version}</version>
   	</dependency>
   	<dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-webdav</artifactId>
-      <version>2.2.7</version>
+      <version>${org.apache.jackrabbit-version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-server</artifactId>
-      <version>2.2.7</version>
+      <version>${org.apache.jackrabbit-version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-jcr-rmi</artifactId>
-      <version>2.2.7</version>
+      <version>${org.apache.jackrabbit-version}</version>
     </dependency>
   </dependencies>
 </project>
